# PlannerX

./: .gitignore  ORCHESTRATOR_REFACTOR.md  TRACKER_AGENT_FIX.md  UPDATES_AGENT_FIXED.md  install.sh  pyproject.toml  report.md  to-do.md
Completed_Plans/: Agent_Specialist_Knowledge.md  Agent_Upgrade_Plan.md  FIXES_4_5_6.md  ORCHESTRATOR_AGENT_SPEC.md  TOOLS_REGISTRY.md  UPDATES_AGENT_SPEC.md
planboard/: __init__.py
planner/: graph.py  main.py  state.py
planner/agents/: architecture_diagram_agent.py  chat_orchestrator.py  consistency_agent.py  executive_agent.py  finalizer_agent.py  griller_agent.py  orchestrator.py  structuring_agent.py  tech_stack_agent.py  tracker_agent.py  updates_agent.py
planner/files/: scaffold.py
planner/tools/: __init__.py  tracker_tools.py
planner/tui/: app.py  planner.css
planner/tui/widgets/: architecture_panel.py  autocomplete.py  chat_input.py
